--- a/templates/navbar/navbar.html.twig
+++ b/templates/navbar/navbar.html.twig
@@ -12,10 +12,10 @@
         {# The two buttons : Sign up and Login #}
         <ul class="navbar-nav me-auto">
           <li class="nav-item mx-2">
-            <a class="nav-link button px-2 mx-1 w-100" id="signup" href="#">Sign up</a>
+            <a class="nav-link button px-2 mx-1 w-100" id="signup" href="/register">Sign up</a>
           </li>
           <li class="nav-item mx-2">
-            <a class="nav-link button px-3 mx-1 w-100" id="login" href="#">Login</a>
+            <a class="nav-link button px-3 mx-1 w-100" id="login" href="/createAccount">Login</a>
           </li>
         </ul>
         
