--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -24,10 +24,10 @@
         {% endblock %}
 
         {% block javascripts %}
-            <script src="assets/JS/bootstrap.min.js"></script>
+            <script src="{{ asset('assets/JS/bootstrap.min.js')}}"></script>
             <script src="https://kit.fontawesome.com/fc2b28fd60.js" crossorigin="anonymous"></script>
-            <script src="assets/JS/stars.js"></script>
-            <script src="assets/JS/hotelS.js"></script>
+            <script src="{{ asset('assets/JS/stars.js')}}"></script>
+            <script src="{{ asset('assets/JS/hotelS.js')}}"></script>
             {% block importmap %}{{ importmap('app') }}{% endblock %}
         {% endblock %}
     </head>
