--- a/templates/footer/footer.html.twig
+++ b/templates/footer/footer.html.twig
@@ -6,19 +6,19 @@
         <div class="col-2">
         {# <div class="row"></div> #}
         <ul>
-            <li><img src="assets/IMG/logoSM.svg" alt="logo" id="logoFooter"></li>
+            <li><img src="{{ asset('assets/IMG/logoSM.svg')}}" alt="logo" id="logoFooter"></li>
             <li>
                 <a href="https://www.facebook.com/?locale=fr_FR">
-                    <img src="assets/IMG/facebook.png" alt="facebook" class="socialMedia">
+                    <img src="{{ asset('assets/IMG/facebook.png')}}" alt="facebook" class="socialMedia">
                 </a>
                 <a href="https://twitter.com/">
-                    <img src="assets/IMG/twitter.png" alt="twitter" class="socialMedia">
+                    <img src="{{ asset('assets/IMG/twitter.png')}}" alt="twitter" class="socialMedia">
                 </a>
                 <a href="https://www.youtube.com/">
-                    <img src="assets/IMG/youtube.png" alt="youtube" class="socialMedia">
+                    <img src="{{ asset('assets/IMG/youtube.png')}}" alt="youtube" class="socialMedia">
                 </a>
                 <a href="https://www.instagram.com/">
-                    <img src="assets/IMG/instagram.png" alt="instagram" class="socialMedia">
+                    <img src="{{ asset('assets/IMG/instagram.png')}}" alt="instagram" class="socialMedia">
                 </a>
             </li>
         </ul>
