--- a/templates/navbar/navbar.html.twig
+++ b/templates/navbar/navbar.html.twig
@@ -3,7 +3,7 @@
   <nav class="navbar navbar-expand" data-bs-theme="light">
     <div class="container-fluid d-flex justify-content-between px-5">
       {# The logo #}
-      <a href="/"><img src="assets/img/logoSM.svg" alt="Logo" class="navbar-brand" id="logo" href=""></a>
+      <a href="/"><img src="{{ asset('assets/img/logoSM.svg')}}" alt="Logo" class="navbar-brand" id="logo" href=""></a>
       {# The search bar #}
       <div class="d-flex w-50">
         <form class="d-flex w-75">
