--- a/templates/destination_crud/show.html.twig
+++ b/templates/destination_crud/show.html.twig
@@ -3,7 +3,10 @@
 {% block title %}Destination{% endblock %}
 
 {% block body %}
-    <h1>Destination</h1>
+<div class="row">
+    <div class="col-2"></div>
+    <div class="col-8">
+    <h1>Informations</h1>
 
     <table class="table">
         <tbody>
@@ -12,19 +15,22 @@
                 <td>{{ destination.id }}</td>
             </tr>
             <tr>
-                <th>NameDestination</th>
+                <th>Pays</th>
                 <td>{{ destination.nameDestination }}</td>
             </tr>
             <tr>
-                <th>PriceDestination</th>
+                <th>Prix</th>
                 <td>{{ destination.priceDestination }}</td>
             </tr>
         </tbody>
     </table>
 
-    <a href="{{ path('app_destination_crud_index') }}">back to list</a>
+    <a href="{{ path('app_destination_crud_index') }}" class="btn btn-primary">Retour</a>
 
-    <a href="{{ path('app_destination_crud_edit', {'id': destination.id}) }}">edit</a>
+    <a href="{{ path('app_destination_crud_edit', {'id': destination.id}) }}" class="btn btn-primary">Modifier</a>
 
     {{ include('destination_crud/_delete_form.html.twig') }}
+</div>
+</div>
+    <div class="col-2"></div>
 {% endblock %}
